Added 'Enter' and 'Escape' key support'

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 		<a href="http://github.com/knadh/jqdialog">GitHub page</a> <a href="https://github.com/knadh/jqdialog/zipball/master">Download ZIP</a>
 	</p>
 	<p>
-		<strong>jqDialog</strong> is a small (3.54 KB minified) dialog plugin that provides smooth, persistent, non-intrusive alternatives for alert(), confirm() and prompt(). There is also a notify() dialog that pops up and goes away in X seconds.
+		<strong>jqDialog</strong> is a small (3.6 KB minified) dialog plugin that provides smooth, persistent, non-intrusive alternatives for alert(), confirm() and prompt(). There is also a notify() dialog that pops up and goes away in X seconds.
 	</p>
 	<p>
-		An IE7 compatibility bug was fixed (April 4, 2011), thanks to Filip Vojtisek.
+		- Support for 'Enter' and 'Escape' keyboard shortcuts added (September 21, 2011)<br />
+		- An IE7 compatibility bug was fixed (April 4, 2011), thanks to Filip Vojtisek.
 	</p>
 	
 	<p class="o">
